# kalshi-trading

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  LICENSE  README.md  api.py  build.yaml  changelog.md  config.yaml  config_cli.py  db.py  espn.py  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  repository.yaml  run.sh  scanner.py  spec.md  sst-env.d.ts  sst.config.ts  sst.pyi  strategies.yaml  tasks.md  test_sport_stats.py  test_ws.py
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.2-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: FEATURES.md  (+4 more)
cli/: package.json  tsconfig.json
dashboard/: next.config.ts  oxfmt.json  oxlint.json  package.json
docs/: project.md
resources/: bundesliga_2024_25_season.json  epl_2024_25_season.json  laliga_2024_25_season.json  ligue1_2024_25_season.json  mls_2025_season.json  seriea_2024_25_season.json
scripts/: dev-build.sh  pre-commit-check.sh  rpi-build.sh
tests/: conftest.py  test_backtest_api.py  test_catalog_editor.py  test_db_migrations.py  test_decision.py  test_dry_run_config.py  test_final_minutes.py  test_find_observed_yes_ask.py  test_match_kalshi_to_espn.py  test_placement.py  test_run_backtest.py  test_scan.py  test_scanner_strategies.py  test_simulate_match.py  test_soccer_cache.py  test_sport_stats.py  test_sports_registry.py  test_stats_populations.py  test_strategies.py  test_strategies_api.py  test_strategy_analytics.py  test_strategy_settlement.py  test_ws.py
(+138 files in other folders)
