[project]
name = "predictions"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.63",
    "cryptography>=46.0.5",
    "fastapi>=0.135.1",
    "httpx>=0.28",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E402", "E712"]

[tool.ty.environment]
python-version = "3.13"

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "ty>=0.0.21",
]
