[project]
name = "predictions"
version = "0.1.0"
description = "Kalshi sports prediction market scanner."
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.5",
    "fastapi>=0.135.1",
    "httpx>=0.28",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/predictions"]

[tool.ruff]
line-length = 100
indent-width = 4
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E402", "E712"]

[tool.ty.environment]
python-version = "3.13"
python-platform = "linux"
root = ["src", "tests"]

[tool.ty.src]
exclude = [".claude/worktrees"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "ty>=0.0.21",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
